(Component) Base para el personaje (pájaro) y sus atributos.

--- a/src/app/home/components/bird/bird.component.html
+++ b/src/app/home/components/bird/bird.component.html
@@ -1,3 +1,6 @@
-<p>
-  bird works!
-</p>
+<main class="bird" [ngStyle]="{
+  'background-size': width +'px ' + height+'px',
+  'width': width+'px',
+  'height': height+'px',
+  'top': top+'px'
+}"> </main>
