--- a/src/app/home/components/obstacle/obstacle.component.html
+++ b/src/app/home/components/obstacle/obstacle.component.html
@@ -1,3 +1,7 @@
-<p>
-  obstacle works!
-</p>
+<main class="obstacle" [ngStyle]="{
+  'width': width+ 'px',
+  'height': height+'px',
+  'top': top+'px',
+  'left': left+'px',
+  'transform': 'rotate('+ rotation + 'deg)'
+}"></main>
