--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -17,6 +17,7 @@
   background: url(/assets/images/bg-flappy.jpeg) no-repeat;
   position: relative;
   overflow: hidden;
+  background-size: cover;
 }
 
 .text {
